# ZOSFileSystem

./: CMakeLists.txt  hello.txt  main.cpp
dokumentace/: dokumentace.docx
filesystem/cli/: CLI.cpp  CLI.hpp
filesystem/components/: FileOperations.cpp  FileOperations.hpp  FileSystem.cpp  FileSystem.hpp  FileSystemController.cpp  FileSystemController.hpp  INodeIO.cpp  INodeIO.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  PathContext.cpp  PathContext.hpp  PathInfo.cpp  PathInfo.hpp
filesystem/global/: Globals.hpp
filesystem/io/: AddressType.h  PathContext.cpp  PathContext.hpp
filesystem/io/model/: Bitmap.cpp  Bitmap.hpp  FolderItem.cpp  FolderItem.hpp  INode.cpp  INode.hpp  SuperBlock.cpp  SuperBlock.hpp
filesystem/util/: ConversionUtils.hpp  FSException.cpp  FSException.hpp  FStreamWrapper.cpp  FStreamWrapper.hpp  FileStream.cpp  FileStream.hpp  FileSystemPath.h  RelativePath.h  StringParsing.cpp  StringParsing.hpp
